# simplicio-code

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  DOD.md  README.md  RELEASE_NOTES_0.3.0-beta.1.md  RELEASE_NOTES_0.3.0-beta.2.md  RELEASE_NOTES_0.3.0-beta.3.md  deny.toml  install.ps1  install.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  component-release-event.yml  json-boundaries.yml  release.yml
config/: json-boundaries-binary-formats.txt  json-boundaries-owned-slice.txt  json-boundaries-runtime-wire.txt  json-boundaries.toml  onboarding-bundle-v1.json
crates/codegen/simplicio-account-client/: Cargo.toml
crates/codegen/simplicio-account-client/src/: idempotency.rs  lib.rs  schema.rs
crates/codegen/simplicio-agent-client/: Cargo.toml
crates/codegen/simplicio-agent-client/src/: lib.rs  operational_inbox.rs
crates/codegen/simplicio-agent-native/: Cargo.toml
crates/codegen/simplicio-agent-native/src/: lib.rs  main.rs
crates/codegen/simplicio-code-formats/: Cargo.toml
crates/codegen/simplicio-code-formats/examples/: format_benchmark.rs
crates/codegen/simplicio-code-formats/src/: atomic.rs  hbi.rs  hbp.rs  lib.rs  migration.rs  toml_config.rs
crates/codegen/simplicio-code-formats/tests/: migration_e2e.rs
crates/codegen/simplicio-code-gateway/: Cargo.toml
crates/codegen/simplicio-code-gateway/benches/: gateway_contract.rs
crates/codegen/simplicio-code-gateway/openapi/: simplicio-gateway.yaml
crates/codegen/simplicio-code-gateway/src/: auth.rs  gateway.rs  lib.rs  redaction.rs
crates/codegen/simplicio-code-gateway/tests/: contract.rs  fake_contract.rs  wiremock_contract.rs
crates/codegen/simplicio-code-gateway/tests/fixtures/: device_authorization.json  entitlement_response.json  models_response.json  usage_response.json
crates/codegen/simplicio-perf-bench/: Cargo.toml
crates/codegen/simplicio-perf-bench/baselines/: run_2026-07-17-repeats3-warmcold.json  run_2026-07-17.json
crates/codegen/simplicio-perf-bench/fixtures/: medium.rs  small.rs
crates/codegen/simplicio-perf-bench/fixtures/monorepo/pkg-a/src/: lib.rs
crates/codegen/simplicio-perf-bench/fixtures/monorepo/pkg-b/src/: lib.rs
crates/codegen/simplicio-perf-bench/fixtures/monorepo/pkg-c/nested/deep/: module.rs
crates/codegen/simplicio-perf-bench/src/: lib.rs
crates/codegen/simplicio-runtime-client/: Cargo.toml
crates/codegen/simplicio-runtime-client/benches/: loop_hub_idempotency.rs  session_registry.rs
crates/codegen/simplicio-runtime-client/src/: agent_workers.rs  component_release.rs  external_routing.rs  generated.rs  lib.rs  loop_hub.rs  loop_hub_transport.rs  map_cache.rs  session_registry.rs
crates/codegen/simplicio-runtime-client/tests/: external_loop_hub.rs  external_worker_hub.rs  fake_server_handshake_proptest.rs  fake_server_malformed_handshake.rs  fake_server_search.rs  handshake_diagnostics.rs
crates/codegen/simplicio-runtime-client/tests/support/: fake_server_main.rs
crates/codegen/xai-crash-handler/: Cargo.toml
crates/codegen/xai-crash-handler/src/: lib.rs  redact.rs  symbolicate.rs
crates/codegen/xai-crash-handler/tests/: redaction_integration.rs
crates/codegen/xai-grok-secrets/: Cargo.toml
crates/codegen/xai-grok-workspace-types/: Cargo.toml
crates/codegen/xai-grok-workspace-types/src/: lib.rs
crates/codegen/xai-grok-workspace-types/src/types/: mod.rs  prototype_first.rs
crates/common/xai-grok-compaction/: Cargo.toml
docs/: AGENT_NATIVE_PROTOCOL.md  AGENT_RUNTIME_PREFLIGHT.md  ARCHITECTURE.md  CI_COVERAGE.md  COMPONENT_RELEASE_MANIFEST.md  COORDINATOR_PROTOCOL.md  DISK_PREFLIGHT.md  EXTERNAL_LLM_ROUTING.md  INSTALLED_CODE_E2E.md  LOOP_CONTRACT_GATE.md  LOOP_HUB_CLIENT.md  MULTISESSION_E2E.md  ONBOARDING_DOCTOR.md  PROTOTYPE_FIRST_DECISION.md  QUICKSTART.md  SESSION_REGISTRY.md  SIMPLICIO_OPERATIONAL_MANUAL.md  TROUBLESHOOTING.md  WORKSPACE_ACCESS_AUDIT.md  benchmark-snake.md  brand-audit.md  capability-command-inventory.v1.json  mapper-context.md  windows-build-status.md
docs/audits/: issue-100-lane-6-2026-07-23.md  issue-139-inventory.json  issue-139-report.md  issue-139-rewrites.json  issue-139-source.json  issue-55-resilience.md
docs/contracts/: component-release-v1.schema.json  prototype-first-decision.v1.json  release-event-v1.schema.json  site-simpleti-api.md  site-simpleti-openapi.yaml  workspace-access-manifest.json
docs/evidence/: issue-204-session-registry.json
docs/migration/: code-binary-state.md  legacy-login-migration.md
docs/perf/: loop-hub-client-benchmark.md  token-latency-benchmark.md
docs/privacy/: network-destinations.md  telemetry.md
docs/rfc/: adaptive-architecture-coordinator.md  continuous-evolution-coordinator.md
docs/security/: incident-runbook.md
examples/: EXAMPLES.md
scripts/: audit_workspace_access.py  benchmark_snake.py  brand_audit.py  check_coverage.py  check_disk_budget.py  check_doc_links.py  check_json_boundaries.py  check_package_contents.py  check_unused_struct_locals.py  ci_diagnostics.py  cleanup_disposable.py  code_loop_hub_e2e.py  code_worker_hub_e2e.py  contrast_audit.py  hbp_receipt.py  headless_invocation_matrix.py  install_git_hooks.sh  installed_code_e2e.py  issue_meta_audit.py  multisession_e2e.py  onboarding_doctor.py  preflight.py  prototype_product_e2e.py  resolve_github_repo.py  run_with_disk_preflight.py  validate_component_release.py  validate_coordinator_protocol.py  validate_loop_contract.py  validate_loop_hub_client.py  validate_prototype_acceptance.py  validate_prototype_decision.py
scripts/bench/: run.sh
scripts/evolution/: fingerprint_dedup.py
scripts/fixtures/: simplicio_installed_fixture.py
scripts/git-hooks/: pre-commit  pre-push
scripts/release/: apply_component_release.py  gen_dev_key.sh  generate_component_client.py  generate_manifest.py  generate_sbom.py  installed_lifecycle_e2e.py  prepare_component_bump.py  promote_component_bundle.py  sign_manifest.sh  verify_installed_promotion.py
tools/: policy_scan.mjs  policy_scan.py  simplicio_code_launcher.sh
(+200 files in other folders)
