[package]
name = "simplicio-agent-native"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Versioned agent-native protocol contracts for Simplicio Code"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
