[package]
name = "simplicio-code-formats"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bounded HBP/HBI envelopes, TOML adapters and atomic migration primitives for Simplicio Code"

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
