[package]
name = "simplicio-code-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Fail-closed Simplicio Code identity and private inference gateway contracts."

[dependencies]
chrono = { workspace = true, features = ["serde"] }
async-stream = { workspace = true }
futures-util = { workspace = true }
keyring = "4.1.5"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[[bench]]
name = "gateway_contract"
harness = false

[lints]
workspace = true
