[package]
name = "simplicio-perf-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Token/latency benchmark harness for Simplicio Runtime file reads (issue #12)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simplicio-runtime-client = { workspace = true }

[[bin]]
name = "simplicio-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "simplicio-bench-check"
path = "src/bin/regression_check.rs"

[lints]
workspace = true
