[package]
name = "simplicio-runtime-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Typed MCP client for the embedded Simplicio Runtime"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
