[package]
name = "simplicio-runtime-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Typed MCP client for the embedded Simplicio Runtime"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
