[package]
name = "simplicio-runtime-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Typed MCP client for the embedded Simplicio Runtime"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
simplicio-code-formats = { path = "../simplicio-code-formats" }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# code#67: property test of the handshake fail-closed guarantee
# (`tests/fake_server_handshake_proptest.rs`).
proptest = { workspace = true }

# Fake stdio MCP server used only by the integration tests in `tests/`, spawned
# in place of a real Simplicio Runtime binary via `SIMPLICIO_BIN`. Not part of
# the crate's public API/dependencies; `test = false` keeps it out of the
# normal `cargo test` binary set, and `doc = false` keeps it out of docs.
[[bin]]
name = "simplicio-fake-runtime-server"
path = "tests/support/fake_server_main.rs"
test = false
doc = false

[lints]
workspace = true
