[package]
license = "Apache-2.0"
edition.workspace = true
name = "xai-crash-handler"
version = "0.1.0"
description = "Cross-platform crash handler (Unix signals + Windows SEH) with startup crash detection"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dependencies]
backtrace = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
backtrace = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "net"] }

[lints]
workspace = true
