[package]
license = "Apache-2.0"
edition.workspace = true
name = "xai-grok-secrets"
version = "0.1.0"
description = "Regex sanitizer for Simplicio Code outbound data (Sentry / Mixpanel / product-event scrubbing)"

[dependencies]
regex = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
