[package]
license = "Apache-2.0"
name = "xai-grok-workspace-types"
version = "0.1.0"
edition.workspace = true
description = "Wire types for the xAI workspace API (request/chunk/event enums shared by client and server)"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true, features = ["force-soft"] }
thiserror = { workspace = true }

[features]
default = []
default-bazel = []

[lints]
workspace = true
