[package]
license = "Apache-2.0"
name = "xai-grok-compaction"
version = "0.1.0"
edition.workspace = true
description = "Shared, transport-agnostic compaction engine for Grok chat and Simplicio Code."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
